--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+yarn.lock
 
 # Production builds
 .next/
@@ -16,6 +18,19 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Frontend specific
+frontend/.next/
+frontend/out/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+
+# Backend specific
+backend/dist/
+backend/.env
+backend/.env.local
+backend/uploads/
 
 # Database
 *.db
